<resources>
    <string name="app_name">Lab2A</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors!</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="please_chosse_your_weapon">Please chosse your weapon:</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
</resources>